// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatasetLabelsContent /> should render properly 1`] = `
Array [
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  padding-left: 8px;
}

.emotion-4 {
  background-color: #808080;
  border-radius: 2px;
  border: none;
  width: 150px;
  color: #ffffff;
  font-size: 15px;
  line-height: 20px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 32px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  -webkit-background-position: right 8px top 50%;
  background-position: right 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
}

.emotion-5 {
  width: 16px;
}

.emotion-8 {
  background-color: #808080;
  border-radius: 2px;
  border: none;
  width: 300px;
  color: #ffffff;
  font-size: 15px;
  line-height: 20px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 32px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  -webkit-background-position: right 8px top 50%;
  background-position: right 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-bottom: 8px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-11 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-11,
.emotion-11:hover,
.emotion-11:visited,
.emotion-11 .noop {
  background-color: #808080;
}

.emotion-11:hover,
.emotion-11 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-11[aria-disabled=true],
.emotion-11 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  padding-right: 8px;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <label
        className="emotion-2"
      >
        Scope
        <div
          className="emotion-3"
        >
          <select
            className="emotion-4"
            defaultValue="TRAIN"
            disabled={false}
            onChange={[Function]}
          >
            <option
              disabled={true}
              value=""
            >
              Select an option...
            </option>
            <option
              value="TRAIN"
            >
              Train
            </option>
            <option
              value="TEST"
            >
              Test
            </option>
          </select>
        </div>
      </label>
      <div
        className="emotion-5"
      />
      <label
        className="emotion-2"
      >
        Label
        <div
          className="emotion-3"
        >
          <select
            className="emotion-8"
            defaultValue="tabby"
            disabled={false}
            onChange={[Function]}
          >
            <option
              disabled={true}
              value=""
            >
              Select an option...
            </option>
            <option
              value="tabby"
            >
              tabby
            </option>
            <option
              value="calico"
            >
              calico
            </option>
          </select>
        </div>
      </label>
    </div>
    <div
      className="emotion-9"
    >
      <div
        className="emotion-10"
      >
        <Link
          href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?query=W3sidHlwZSI6ImxhYmVsIiwiYXR0cmlidXRlIjoibGFiZWxzLmNhdHMiLCJkYXRhc2V0SWQiOiI0YjBiMTBhOC1jZWMxLTE1NWMtYjEyZi1lZTJiYzg3ODdlMDYiLCJ2YWx1ZXMiOnt9fV0="
          passHref={true}
        >
          <button
            aria-label="View in Filter Panel"
            className="emotion-11"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-12"
            >
              <svg
                className="emotion-13"
                data-file-name="filter.svg"
                height={20}
              />
              View in Filter Panel
            </div>
          </button>
        </Link>
        <div
          className="emotion-5"
        />
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer"
          href="/[projectId]/visualizer"
          passHref={true}
        >
          <button
            aria-label="Add More Labels"
            className="emotion-11"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-12"
            >
              <svg
                className="emotion-13"
                data-file-name="pen.svg"
                height={20}
              />
              Add More Labels
            </div>
          </button>
        </Link>
      </div>
    </div>
  </div>,
  .emotion-0 {
  height: 16px;
}

<div
    className="emotion-0"
  />,
  <DatasetLabelsAssets
    datasetId="4b0b10a8-cec1-155c-b12f-ee2bc8787e06"
    datasetName="cats"
    label="tabby"
    page={1}
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    scope="TRAIN"
  />,
]
`;

exports[`<DatasetLabelsContent /> should render properly without labels 1`] = `
Array [
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  padding-left: 8px;
}

.emotion-4 {
  background-color: #808080;
  border-radius: 2px;
  border: none;
  width: 150px;
  color: #ffffff;
  font-size: 15px;
  line-height: 20px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 32px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  -webkit-background-position: right 8px top 50%;
  background-position: right 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
}

.emotion-5 {
  width: 16px;
}

.emotion-8 {
  background-color: #808080;
  border-radius: 2px;
  border: none;
  width: 300px;
  color: #ffffff;
  font-size: 15px;
  line-height: 20px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 32px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  -webkit-background-position: right 8px top 50%;
  background-position: right 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-bottom: 8px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-11 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-11,
.emotion-11:hover,
.emotion-11:visited,
.emotion-11 .noop {
  background-color: #808080;
}

.emotion-11:hover,
.emotion-11 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-11[aria-disabled=true],
.emotion-11 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  padding-right: 8px;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <label
        className="emotion-2"
      >
        Scope
        <div
          className="emotion-3"
        >
          <select
            className="emotion-4"
            defaultValue="TRAIN"
            disabled={false}
            onChange={[Function]}
          >
            <option
              disabled={true}
              value=""
            >
              Select an option...
            </option>
            <option
              value="TRAIN"
            >
              Train
            </option>
            <option
              value="TEST"
            >
              Test
            </option>
          </select>
        </div>
      </label>
      <div
        className="emotion-5"
      />
      <label
        className="emotion-2"
      >
        Label
        <div
          className="emotion-3"
        >
          <select
            className="emotion-8"
            defaultValue=""
            disabled={false}
            onChange={[Function]}
          >
            <option
              disabled={true}
              value=""
            >
              Select an option...
            </option>
          </select>
        </div>
      </label>
    </div>
    <div
      className="emotion-9"
    >
      <div
        className="emotion-10"
      >
        <Link
          href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?query=W3sidHlwZSI6ImxhYmVsIiwiYXR0cmlidXRlIjoibGFiZWxzLmNhdHMiLCJkYXRhc2V0SWQiOiI0YjBiMTBhOC1jZWMxLTE1NWMtYjEyZi1lZTJiYzg3ODdlMDYiLCJ2YWx1ZXMiOnt9fV0="
          passHref={true}
        >
          <button
            aria-label="View in Filter Panel"
            className="emotion-11"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-12"
            >
              <svg
                className="emotion-13"
                data-file-name="filter.svg"
                height={20}
              />
              View in Filter Panel
            </div>
          </button>
        </Link>
        <div
          className="emotion-5"
        />
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer"
          href="/[projectId]/visualizer"
          passHref={true}
        >
          <button
            aria-label="Add More Labels"
            className="emotion-11"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-12"
            >
              <svg
                className="emotion-13"
                data-file-name="pen.svg"
                height={20}
              />
              Add More Labels
            </div>
          </button>
        </Link>
      </div>
    </div>
  </div>,
  .emotion-0 {
  height: 16px;
}

<div
    className="emotion-0"
  />,
  <DatasetLabelsAssets
    datasetId="4b0b10a8-cec1-155c-b12f-ee2bc8787e06"
    datasetName="cats"
    label=""
    page={1}
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    scope="TRAIN"
  />,
]
`;
